# MessageSystem

./: .gitignore  AGENTS.md  CMakeLists.txt  SPEC.md  config.in.h  manul.md
comm/: comm.hpp  logger.hpp  makefile  test_comm.cpp
src/comm_include/: channel.hpp  comm.hpp  comm.pb.h  config.h  es.hpp  etcd.hpp  filesystem.hpp  latecymonitor.hpp  logger.hpp  mail.hpp  makefile  messageDB.hpp  rabbitmq.hpp  redis.hpp
src/comm_include/odb/conversation/: conversation-odb.cxx  conversation-odb.hxx  conversation-odb.ixx  conversation.hxx  conversation.sql  converstaion-odb.cxx  converstaion-odb.hxx  converstaion-odb.ixx  converstaion.hxx  converstaion.sql  odb_conversation.hpp  odb_converstaion.hpp
src/comm_include/odb/friend/: friend-odb.cxx  friend-odb.hxx  friend-odb.ixx  friend.hxx  friend.sql  odb_friend.hpp
src/comm_include/odb/message/: message-odb.cxx  message-odb.hxx  message-odb.ixx  message.hxx  message.sql  message_outbox-odb.cxx  message_outbox-odb.hxx  message_outbox-odb.ixx  message_outbox.hxx  message_outbox.sql  odb_message.hpp  odb_message_outbox.hpp
src/comm_include/odb/user/: odb_user.hpp  user-odb.cxx  user-odb.hxx  user-odb.ixx  user.hxx  user.sql
src/comm_include/proto_include/: comm.pb.cc  comm.pb.h  conversation.pb.cc  conversation.pb.h  file.pb.cc  file.pb.h  friend.pb.cc  friend.pb.h  gateway.pb.cc  gateway.pb.h  message.pb.cc  message.pb.h  message_store.pb.cc  message_store.pb.h  task_transfer.pb.cc  task_transfer.pb.h  user.pb.cc  user.pb.h
src/proto/: comm.proto  conversation.proto  file.pb.cc  file.pb.h  file.proto  friend.proto  gateway.proto  message.pb.h  message.proto  message_store.pb.cc  message_store.pb.h  message_store.proto  task_transfer.proto  user.pb.cc  user.pb.h  user.proto
src/service/: comm.pb.cc
src/service/conversation/: CMakeLists.txt  conversationDB.hpp  conversation_server.cpp  conversation_server.hpp
src/service/file/: CMakeLists.txt  file.pb.h  file_server.cpp  file_server.hpp
src/service/file/test/: makefile  test.cpp
src/service/friend/: CMakeLists.txt  friend_server.cpp  friend_server.hpp
src/service/gateway/: CMakeLists.txt  connection.hpp  gateway.cpp  gateway.hpp  ws_backend_pool.hpp  ws_connection.hpp  ws_handlers.hpp  ws_protocol.hpp  ws_router.hpp  ws_server.hpp
src/service/message/: CMakeLists.txt  message_server.cpp  message_server.hpp
src/service/message_store/: CMakeLists.txt  message_store_server.cpp  message_store_server.hpp
src/service/task_transfer/: CMakeLists.txt  task_transfer.cpp  task_transfer_server.hpp
src/service/user/: CMakeLists.txt  test  test.cpp  user.pb.cc  user.pb.h  user_server.cpp  user_server.hpp
test/: makefile  test  test.cpp  test_db.sql
test/gtest/: CMakeLists.txt  README.md  run_test.sh  test_database.cpp  test_friend.cpp  test_message_server.cpp  test_message_store.cpp  test_task_transfer.cpp
